feat: implements prettier on backend
